--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,6 @@
 name: Continuous Integration Workflow
 
-# This workflow is triggered whenever a new PR is created on the main branch
+# This workflow is triggered whenever a new PR
 on:
   pull_request:
     branches:
